--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mahfuzur rahman portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins&family=Roboto:wght@100&display=swap" rel="stylesheet">
+ 
 </head>
 <body>
+    <h1>Welcome To</h1>
+    <h1> <span>Mahfuzur Rahman</span> World</h1>
     
 </body>
 </html>
