anchor added and some changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,29 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins&family=Roboto:wght@100&display=swap" rel="stylesheet">
- 
+    <link
+        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins&family=Roboto:wght@100&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
-    <h1>Welcome To</h1>
-    <h1> <span>Mahfuzur Rahman</span> World</h1>
-    
+    <section>
+        <div class="divone">
+            <h1>Welcome To</h1>
+            <h1> <span>Mahfuzur Rahman</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web Development
+                Hero.</p>
+                <a href="https://www.linkedin.com/in/mahfuzur-rahman01/" target="_blank">Hire Me</a>
+        </div>
+        <div class="divtwo">
+            <img src="images/firstpic.png" alt="profile pic">
+        </div>
+    </section>
+
+
 </body>
+
 </html>
