--- a/index.html
+++ b/index.html
@@ -16,19 +16,39 @@
 </head>
 
 <body>
-    <section>
+    <section class="head-banner">
         <div class="divone">
             <h1>Welcome To</h1>
             <h1> <span>Mahfuzur Rahman</span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.
-                That's why I am learning and mastering web development. I will not stop until I become the Web Development
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
                 Hero.</p>
-                <a href="https://www.linkedin.com/in/mahfuzur-rahman01/" target="_blank">Hire Me</a>
+            <a href="https://www.linkedin.com/in/mahfuzur-rahman01/" target="_blank">Hire Me</a>
         </div>
         <div class="divtwo">
             <img src="images/firstpic.png" alt="profile pic">
         </div>
+    </section>
+    <section class="secondone">
+        <div class="divthree">
+            <img src="images/last.png" alt="">
+        </div>
+        <div class="divfour">
+            <h1>Dream Big</h1>
+
+            <h3>Become a <span>web developer</span></h3>
+
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                <a href="#" target="_blank">Download Resume</a>
+        </div>
+
+    </section>
+    <section class="thirdone">
+        
     </section>
 
 
