--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
                 to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-                <a href="#" target="_blank">Download Resume</a>
+            <a href="#" target="_blank">Download Resume</a>
         </div>
 
     </section>
@@ -53,17 +53,21 @@
             <div class="experience-item">
                 <h1>Full Stack Web Developer</h1>
                 <h3>2021-Present | Pro Level Developer</h3>
-                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
             <div class="experience-item">
                 <h1>Baby Web Developer</h1>
                 <h3>2022-2024| Programming Hero Learner</h3>
-                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
             </div>
         </div>
     </section>
-
-
 </body>
-
+<footer>
+  <p>© Mahfuzur Rahman 2022, a Programming Hero initiative.</p>
+</footer>
 </html>
